--- a/src/views/user-crete-form.ejs
+++ b/src/views/user-crete-form.ejs
@@ -14,39 +14,41 @@
 			</div>
 		</div>
 		<div class="col-12">
-			<form action="/products/create" method="POST">
+			<form action="/user/create" method="POST">
 				<div class="row product-detail">
-					<div class="col-12 col-md-6">
-						<label for="name" class="form-label">Nombre del producto:</label>
-						<input type="text" id="name" name="name" placeholder="Ej: Zapatillas Reebok" class="form-input">
-					</div>
-					<div class="col-12 col-md-6">
-						<label for="price" class="form-label">Precio del producto:</label>
-						<input type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input">
-					</div>
-					<div class="col-12 col-md-6">
-						<label for="discount" class="form-label">Descuento:</label>
-						<input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
-					</div>
-					<div class="col-12 col-md-6">
-						<label for="category" class="form-label">Categoría:</label>
-						<select name="category" id="category" class="form-input">
-							<option value="">Elegí</option>
-							<option value="in-sale">En oferta</option>
-							<option value="visited">Últimos agregados</option>
-						</select>
-					</div>
-					<div class="col-12">
-						<label for="description" class="form-label">Descipción:</label>
-						<textarea name="description" id="description" class="form-input"></textarea>
-					</div>
-					<div class="col-12">
-						<button type="submit" class="buy-now-button">Guardar producto</button>
-					</div>
+				  <div class="col-12 col-md-6">
+					<label for="name" class="form-label">Nombre:</label>
+					<input type="text" id="name" name="first_name" placeholder="Ej: Juan" class="form-input" value=" <%= locals.old && old.first_name %>">
+					<% if (locals.errors && errors.first_name) { %>
+					  <p class="feedback"><%= errors.first_name.msg %></p>
+					<% } %>
+				  </div>
+				  <div class="col-12 col-md-6">
+					<label for="price" class="form-label">Apellido:</label>
+					<input type="text" id="price" name="last_name" placeholder="Ej: Pérez" class="form-input" value="<%= locals.old && old.last_name %>">
+					<% if (locals.errors && errors.last_name) { %>
+					  <p class="feedback"><%= errors.last_name.msg %></p>
+					<% } %>
+				  </div>
+				  <div class="col-12 col-md-6">
+					<label for="discount" class="form-label">Email:</label>
+					<input type="text" id="discount" name="email" placeholder="Ej: ejemplo@correo.com" class="form-input" value="<%= locals.old && old.email %>">
+					<% if (locals.errors && errors.email) { %>
+					  <p class="feedback"><%= errors.email.msg %></p>
+					<% } %>
+				  </div>
+				  <div class="col-12">
+					<label for="description" class="form-label">Contraseña:</label>
+					<input type="password" name="password" id="description" class="form-input">
+					<% if (locals.errors && errors.password) { %>
+					  <p class="feedback"><%= errors.password.msg %></p>
+					<% } %>
+				  </div>
+				  <div class="col-12">
+					<button type="submit" class="buy-now-button">Guardar usuario</button>
+				  </div>
 				</div>
-			</form>
-		</div>
-
+			  </form>
 	</div>
 	<!-- /todos los productos -->
 
